# ics-subscribe

./: Cargo.toml  README.md  config.toml  config_34082301.toml
src/: calendar.rs  config.rs  main.rs
static/: 2026年实训课表V3.2.xlsx  config_34082301.ics
