[package]
name = "ics-subscribe"
version = "0.1.0"
edition = "2024"

[dependencies]
icalendar = { version = "0.17", features = ["recurrence"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
